# screencapturekit-rs

./: Cargo.toml
.github/workflows/: build.yml  contrib.yml
examples/: capture_audio.rs  mic_audio.rs  segfault.rs  util.rs  vad_iter.rs
screencapturekit/: Cargo.toml
screencapturekit-sys/examples/: store_audio.rs
screencapturekit-sys/src/: stream_output_handler.rs
screencapturekit/examples/: segfault.rs
screencapturekit/src/: sc_output_handler.rs  sc_stream.rs
src/output/: mod.rs  sc_stream_frame_info.rs
src/shareable_content/: display.rs  mod.rs  running_application.rs  window.rs
src/stream/: content_filter.rs  delegate_trait.rs  mod.rs  output_trait.rs  output_type.rs  sc_stream.rs
src/stream/configuration/: audio.rs  colors.rs  dimensions.rs  internal.rs  mod.rs  pixel_format.rs
src/stream/internal/: cleanup.rs  delegate.rs  ffi_utils.rs  mod.rs  output_handler.rs  sc_stream.rs  stream.rs
tests/: leak_test.rs
