[package]
name = "screencapturekit"

keywords = ["screencapture", "screencapturekit", "macos"]
description = "Rust wrapper for apple's ScreenCaptureKit"

categories = [
  "external-ffi-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]

repository = "https://github.com/svtlabs/screencapturekit-rs"
authors = ["Per Johansson <per@doom.fish>"]
homepage = "https://github.com/svtlabs"
edition = "2021"
rust-version = "1.72"
version = "0.3.0"
license = "MIT OR Apache-2.0"

[lib]
path = "./src/lib.rs"

[features]
ci = []


[dependencies]
core-media-rs = { version = "0.2.2" }
core-utils-rs = { version = "0.2.2" }
objc = { version = "0.2", features = ["exception"] }
block2 = "0.5"
dispatch = "0.2"
core-foundation = { version = "0.10" }
core-graphics = { version = "0.24" }

console = "0.15.8"
cpal = "0.15.3"
crossbeam = "0.8.4"
ctrlc = "3.4.4"
hound = "3.5.1"
once_cell = "1.19.0"
rodio = "0.18.1"
sdl2 = { version = "0.36.0" }
swap-buffer-queue = "0.2.0"
termion = "4.0.0"
whisper-rs = { git = "https://github.com/hlhr202/whisper-rs.git", branch = "feature/fix-metal", features = ["metal"] }
rubato = "0.16.1"
