[package]
name = "screencapturekit"
description = "Safe wrapper for Apple's ScreenCaptureKit"
categories = [
  "api-bindings",
  "multimedia",
  "multimedia::video",
  "os::macos-apis",
]
readme = "README.md"
repository = "https://github.com/svtlabs/screencapturekit-rs/tree/main/screencapturekit"

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
homepage.workspace = true
rust-version.workspace = true

[features]
ci = []

[lib]
path = "./src/lib.rs"

[dependencies]
crossbeam = "0.8.4"
ctrlc = "3.4.4"
hound = "3.5.1"
once_cell = "1.19.0"
rodio = "0.18.1"
screencapturekit-sys = { version = "0.2.8", path = "../screencapturekit-sys" }
swap-buffer-queue = "0.2.0"
whisper-rs = { git = "https://github.com/hlhr202/whisper-rs.git", branch = "feature/fix-metal", features = ["metal"] }
